--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,44 +18,40 @@
         android:background="@drawable/back"
         android:onClick="back"
         android:layout_marginStart="10dp"
-        tools:ignore="UsingOnClickInXml" />
-
-    <LinearLayout
-        android:id="@+id/action_set"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="@id/board"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginEnd="60dp"
-        tools:ignore="MissingConstraints">
-        <TextView
-            android:id="@+id/AI_action"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="AI:"
-            android:textSize="20sp"/>
-        <TextView
-            android:id="@+id/player_action"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="玩家:"
-            android:textSize="20sp"/>
-    </LinearLayout>
-
+        tools:ignore="ContentDescription,UsingOnClickInXml" />
 
     <ImageView
+        android:layout_toLeftOf="@+id/board"
+        android:layout_centerVertical="true"
         android:id="@+id/choose"
         android:layout_width="33dp"
         android:layout_height="30dp"
-        app:layout_constraintTop_toTopOf="@+id/board"
-        app:layout_constraintBottom_toBottomOf="@id/board"
-        app:layout_constraintRight_toLeftOf="@id/board"
         android:layout_marginRight="5dp"
         tools:ignore="ContentDescription"
-        android:layout_marginEnd="5dp" />
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@+id/board" />
+
+    <TextView
+        android:gravity="center"
+        android:id="@+id/txt_name_player_2"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/white"
+        tools:ignore="RelativeOverlap" />
+    <TextView
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:id="@+id/txt_name_player_1"
+        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="150dp"
+        android:layout_height="30dp"/>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_centerInParent="true"
         android:id="@+id/board"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -650,7 +647,7 @@
             app:layout_constraintLeft_toRightOf="@id/p80"
             android:layout_width="33dp"
             android:layout_height="30dp"
-            tools:ignore="ContentDescription,UsingOnClickInXml" />
+            tools:ignore="ContentDescription,TooManyViews,UsingOnClickInXml" />
         <ImageView
             android:onClick="clickCheck"
             android:id="@+id/p82"
@@ -780,5 +777,28 @@
             android:layout_height="30dp"
             tools:ignore="ContentDescription,UsingOnClickInXml" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:background="@color/white"
+        android:id="@+id/layout_waiting"
+        android:orientation="vertical"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true">
+        <TextView
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@string/ang_s_p_x_p_b_n_ch_i"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <ProgressBar
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/black"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            tools:ignore="UnusedAttribute" />
+    </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
