--- a/app/src/main/res/layout/custom_dialog_pvp.xml
+++ b/app/src/main/res/layout/custom_dialog_pvp.xml
@@ -23,14 +23,14 @@
         android:layout_alignParentRight="true" />
 
     <Button
-        android:layout_marginTop="20dp"
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/edt_player"
+        android:layout_marginTop="20dp"
         android:layout_toStartOf="@id/btn_ok"
+        android:layout_toLeftOf="@id/btn_ok"
         android:background="?android:attr/selectableItemBackground"
         android:text="@string/cancel"
-        android:textColor="@color/black"
-        android:layout_toLeftOf="@id/btn_ok" />
+        android:textColor="@color/black" />
 </RelativeLayout>
